--- a/main.css
+++ b/main.css
@@ -6,115 +6,69 @@ body {
   font-family: Arial, Tahoma, sans-serif;
 }
 
-.quiz-app {
-  margin: 20px auto;
+.repos-main {
   width: 800px;
-  background-color: #f8f8f8;
-  padding: 15px;
+  background-color: #f6f6f6;
+  margin: auto;
 }
 
-.quiz-app .quiz-info {
+.repos-main .get-repos {
+  padding: 20px;
   display: flex;
-  background-color: #fff;
-  padding: 20px;
+  background-color: #eee;
 }
 
-.quiz-app .quiz-info .category {
-  flex: 1;
-}
-
-.quiz-app .quiz-info .count {
-  flex: 1;
-  text-align: right;
-}
-
-.quiz-app .quiz-area {
-  background-color: #fff;
-  padding: 20px;
-  margin-top: 15px;
-}
-
-.quiz-app .quiz-area h2 {
-  margin: 0;
-}
-
-.quiz-app .answers-area {
-  background-color: #fff;
-  padding: 20px;
-}
-
-.quiz-app .answers-area .answer {
-  background-color: #f9f9f9;
-  padding: 15px;
-}
-
-.quiz-app .answers-area .answer:not(:last-child) {
-  border-bottom: 1px solid #dfdfdf;
-}
-
-.quiz-app .answers-area .answer input[type="Radio"]:checked + label {
-  color: #0075ff;
-}
-
-.quiz-app .answers-area .answer label {
-  cursor: pointer;
-  font-weight: bold;
-  color: #777;
-  font-size: 14px;
-  margin-left: 7px;
-}
-
-.quiz-app .submit-answer {
-  background-color: #0075ff;
-  display: block;
-  width: 90%;
-  padding: 10px 20px;
+.repos-main .get-repos input {
+  width: 100%;
+  padding: 15px 20px;
   border: none;
+  font-size: 20px;
+  height: 54px;
+}
+
+.repos-main .get-repos input:focus {
+  outline: 2px solid #f44336;
+}
+
+.repos-main .get-repos .get-button {
+  width: 140px;
+  margin-left: 10px;
+  height: 54px;
+  background-color: #f44336;
   color: #fff;
+  line-height: 54px;
+  text-align: center;
   font-weight: bold;
   cursor: pointer;
-  border-radius: 6px;
-  margin: 20px auto;
 }
 
-.quiz-app .submit-answer:focus {
-  outline: none;
-}
-
-.quiz-app .bullets {
-  border-top: 1px solid #dfdfdf;
-  background-color: #fff;
-  display: flex;
+.repos-main .show-data {
   padding: 20px;
+  background-color: #e0e0e0;
 }
 
-.quiz-app .bullets .spans {
-  flex: 1;
-  display: flex;
+.repos-main .show-data .repo-box {
+  background-color: #fff;
+  padding: 15px;
 }
-.quiz-app .bullets .spans span {
-  width: 20px;
-  height: 20px;
-  background-color: #ddd;
-  margin-right: 5px;
-  border-radius: 50%;
+.repos-main .show-data .repo-box:not(:last-child) {
+  margin-bottom: 5px;
 }
-
-.quiz-app .bullets .spans span.on {
-  background-color: #0075ff;
+.repos-main .show-data .repo-box a,
+.repos-main .show-data .repo-box span {
+  float: right;
+  margin-left: 4px;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 12px;
+  width: 90px;
+  text-align: center;
+  padding: 4px;
 }
-.quiz-app .resutls span {
-  font-weight: bold;
+.repos-main .show-data .repo-box a {
+  text-decoration: none;
+  background-color: #e91e63;
 }
-
-.quiz-app .resutls span.bad {
-  color: #dc0a0a;
-}
-
-.quiz-app .resutls span.good {
-  color: #009600;
-}
-
-.quiz-app .resutls span.perfect {
-  color: #0075ff;
+.repos-main .show-data .repo-box span {
+  background-color: #009688;
 }
